--- a/amazon.html
+++ b/amazon.html
@@ -57,9 +57,8 @@
   </div>
 
   <script src="data/products.js"></script>
-  <script src="scripts/amazon.js">
-
-  </script>
+  <script src="scripts/amazon.js"></script>
+  <script src="data/cart.js"></script>
 </body>
 
 </html>
